<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertarDiccionario">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:columnCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/id_diccionario"
            android:textSize="14sp"
            app:layout_column="0"
            app:layout_gravity="end"
            app:layout_row="0" />

        <EditText
            android:id="@+id/txtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/pal_expr_esp"
            android:textSize="14sp"
            app:layout_column="0"
            app:layout_gravity="end"
            app:layout_row="1"
            tools:layout_editor_absoluteX="-66dp"
            tools:layout_editor_absoluteY="196dp" />

        <EditText
            android:id="@+id/txtPal_Expr_Esp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pal_expr"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_column="1"
            app:layout_row="1"
            tools:layout_editor_absoluteX="-121dp"
            tools:layout_editor_absoluteY="221dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/pal_expr_ing"
            android:textSize="14sp"
            app:layout_column="0"
            app:layout_gravity="end"
            app:layout_row="2"
            tools:layout_editor_absoluteX="-81dp"
            tools:layout_editor_absoluteY="187dp" />

        <EditText
            android:id="@+id/txtPal_Expr_Ing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pal_expr"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_column="1"
            app:layout_row="2"
            tools:layout_editor_absoluteX="-111dp"
            tools:layout_editor_absoluteY="180dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:gravity="center|end"
            android:padding="5dp"
            android:text="@string/tipo_diccionario"
            android:textSize="14sp"
            app:layout_column="0"
            app:layout_gravity="end"
            app:layout_row="3"
            tools:layout_editor_absoluteX="-74dp"
            tools:layout_editor_absoluteY="240dp" />

        <Spinner
            android:id="@+id/spinDiccionario"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:contentDescription="@string/tipo_diccionario"
            app:layout_column="1"
            app:layout_row="3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/fecha_intro"
            android:textSize="14sp"
            app:layout_column="0"
            app:layout_gravity="end"
            app:layout_row="4"
            tools:layout_editor_absoluteX="-76dp"
            tools:layout_editor_absoluteY="278dp" />

        <EditText
            android:id="@+id/txtFechIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fecha_intro_txt"
            android:inputType="date"
            android:minHeight="48dp"
            app:layout_column="1"
            app:layout_row="4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/fecha_ult"
            android:textSize="14sp"
            app:layout_column="0"
            app:layout_gravity="end"
            app:layout_row="5"
            tools:layout_editor_absoluteX="-38dp"
            tools:layout_editor_absoluteY="466dp" />

        <EditText
            android:id="@+id/txtFechUlt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fecha_intro_txt"
            android:inputType="date"
            android:minHeight="48dp"
            app:layout_column="1"
            app:layout_row="5" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/cont_aciertos"
            android:textSize="14sp"
            app:layout_column="0"
            app:layout_gravity="end"
            app:layout_row="6"
            tools:layout_editor_absoluteX="-81dp"
            tools:layout_editor_absoluteY="425dp" />

        <EditText
            android:id="@+id/txtContAciertos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cont_aciertos_txt"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_column="1"
            app:layout_row="6" />

    </androidx.gridlayout.widget.GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:padding="10sp"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:text="@string/btnContinuar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>